# HLBC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
autoagric/canbus/: chassis.pb.cc  chassis.pb.h
autoagric/common/: error_code.pb.cc  error_code.pb.h  geometry.pb.cc  geometry.pb.h  header.pb.cc  header.pb.h  pnc_point.pb.cc  pnc_point.pb.h  vehicle_config.pb.cc  vehicle_config.pb.h  vehicle_state.pb.cc  vehicle_state.pb.h
autoagric/control/: calibration_table.pb.cc  calibration_table.pb.h  control_cmd.pb.cc  control_cmd.pb.h  control_conf.pb.cc  control_conf.pb.h  gain_scheduler_conf.pb.cc  gain_scheduler_conf.pb.h  lat_controller_conf.pb.cc  lat_controller_conf.pb.h  local_view.pb.cc  local_view.pb.h  lon_controller_conf.pb.cc  lon_controller_conf.pb.h  mpc_controller_conf.pb.cc  mpc_controller_conf.pb.h  mrac_conf.pb.cc  mrac_conf.pb.h  pid_conf.pb.cc  pid_conf.pb.h
autoagric/localization/: localization.pb.cc  localization.pb.h  pose.pb.cc  pose.pb.h
autoagric/perception/: perception_obstacle.pb.cc  perception_obstacle.pb.h
autoagric/planning/: decision.pb.cc  decision.pb.h  planner_open_space_config.pb.cc  planner_open_space_config.pb.h  planning.pb.cc  planning.pb.h  reference_line_smoother_config.pb.cc  reference_line_smoother_config.pb.h  sl_boundary.pb.cc  sl_boundary.pb.h  st_drivable_boundary.pb.cc  st_drivable_boundary.pb.h  task_config.pb.cc  task_config.pb.h
autoagric/planning/math/: cos_theta_smoother_config.pb.cc  cos_theta_smoother_config.pb.h  fem_pos_deviation_smoother_config.pb.cc  fem_pos_deviation_smoother_config.pb.h
autoagric/prediction/: feature.pb.cc  feature.pb.h  prediction_obstacle.pb.cc  prediction_obstacle.pb.h  prediction_point.pb.cc  prediction_point.pb.h  scenario.pb.cc  scenario.pb.h
conf/: control.conf  control_conf.pb.txt  custom_rosconsole.conf  discrete_points_smoother_config.pb.txt  iterative_anchoring_smoothing_wrapper_config.pb.txt  mpc_controller_conf.pb.txt  open_space_trajectory_generator.pb.txt  open_space_trajectory_task.pb.txt  static_path.conf.pb.txt  static_path_conf.pb.txt
data/: .~lock.saved_waypoints.csv#  saved_waypoints.csv  saved_waypoints_CSCn.csv  saved_waypoints_SCSn.csv  saved_waypoints_SCSp.csv  saved_waypoints_test.csv  vehicle_param.pb.txt
include/common/: macro.h
include/common/configs/: config_gflags.h  vehicle_config_helper.h
include/common/math/: aabox2d.h  box2d.h  cartesian_frenet_conversion.h  euler_angles_zxy.h  line_segment2d.h  linear_interpolation.h  linear_quadratic_regulator.h  math_utils.h  matrix_operations.h  mpc_ipopt.h  polygon2d.h  quaternion.h  search.h  vec2d.h
include/common/status/: status.h
include/common/test/: static_trajectory_loader.h  trajectory_loader.h
include/common/util/: csv_reader.h  factory.h  file.h  point_factory.h  static_path_generator.h  static_path_wrapper.h  string_util.h  trajectory_visualizer.h  util.h
include/common/vehicle_state/: vehicle_state_provider.h
include/control/: control_component.h
include/control/common/: control_gflags.h  curvature_1d.h  dependency_injector.h  interpolation_1d.h  interpolation_2d.h  msg_to_proto.h  pb3_ros_msgs.h  pid_BC_controller.h  pid_IC_controller.h  pid_controller.h  trajectory_analyzer.h  trajectory_visualizer.h
include/control/controller/: control_component.h  controller.h  controller_agent.h  controller_interface.h  lat_controller.h  mpc_controller.h
include/nodes/: control_node.h
include/planning/common/: dependency_injector.h  ego_info.h  obstacle.h  planning_gflags.h  speed_profile_generator.h
include/planning/constraint_checker/: collision_checker.h
include/planning/lattice/: feasible_region.h
include/planning/math/: curve_math.h  discrete_points_math.h
include/planning/reference_line/: discrete_points_reference_line_smoother.h  discrete_points_trajectory_smoother.h  reference_line.h  reference_line_smoother.h  reference_point.h  trajectory_smoother.h
include/planning/static/: static_path_generator.h  static_path_wrapper.h
launch/: _wrapper.test.launch  control_node.launch  control_node.sim.launch  control_node.test.launch  discrete_points_trajectory_smoother.launch  iterative_anchoring_smoothing_wrapper_test.launch  open_space_trajectory_wrapper.test.launch  static_path_generator.launch  static_path_generator.test.launch  static_trajectory_loader.test.launch  trajectory_visualizer.launch
msg/: PathPoint.msg  Trajectory.msg  TrajectoryPoint.msg
proto/: CMakeLists.txt  chassis.proto  control_cmd.proto  control_conf.proto  header.proto  lat_controller_conf.proto  local_view.proto  localization.proto  mrac_conf.proto  planning.proto  pnc_point.proto  pose.proto  reference_line_smoother_config.proto  vehicle_config.proto  vehicle_state.proto
proto/autoagric/canbus/: chassis.proto
proto/autoagric/common/: error_code.proto  geometry.proto  header.proto  pnc_point.proto  vehicle_config.proto  vehicle_state.proto
proto/autoagric/control/: calibration_table.proto  control_cmd.proto  control_conf.proto  gain_scheduler_conf.proto  lat_controller_conf.proto  local_view.proto  lon_controller_conf.proto  mpc_controller_conf.proto  pid_conf.proto
proto/autoagric/localization/: localization.proto  pose.proto
proto/autoagric/perception/: perception_obstacle.proto
proto/autoagric/planning/: decision.proto  open_space_task_config.proto  open_space_trajectory_generator_config.proto  planner_open_space_config.proto  planning.proto  reference_line_smoother_config.proto  sl_boundary.proto  st_drivable_boundary.proto  static_path.proto  (+2 more)
scripts/: install-osqp.sh  install-protobuf.sh
scripts/calibration/: step_response.py  step_response.sh
src/: CMakeLists.txt  LICENSE  README.md  conf  data  include  launch  package.xml  proto
src/control/: control_component.cpp
src/nodes/: control_node.cpp  discrete_points_trajectory_smoother_test.cpp  iterative_anchoring_smoothing_wrapper_test.cpp  open_space_trajectory_wrapper_test.cpp  piecewise_jerk_speed_problem_test.cpp  static_path_generator_test.cpp  static_trajectory_loader_test.cpp  trajectory_visualizer_test.cpp
(+104 files in other folders)
